--- a/po/mn.po
+++ b/po/mn.po
@@ -3,18 +3,20 @@
 # This file is distributed under the same license as the PACKAGE package.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER.
 # Sanlig Badral <badral@chinggis.com>, 2003.
-# Sanlig Badral <Badral@openmn.org>, 2003.
+# Sanlig Badral <Badral@openmn.org>, 2003, 2004.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp.HEAD\n"
-"POT-Creation-Date: 2004-02-04 17:19-0600\n"
-"PO-Revision-Date: 2003-12-31 22:13+0800\n"
-"Last-Translator: Dulmandakh <sdulmandakh@yahoo.com>\n"
-"Language-Team: Mongolian <openmn-kdemn@lists.sourceforge.net>\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-02-04 20:49+0100\n"
+"PO-Revision-Date: 2004-02-04 02:34+0100\n"
+"Last-Translator: Sanlig Badral <Badral@openmn.org>\n"
+"Language-Team: Mongolian <openmn-core@lists.sf.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.0.2\n"
 
 #: data/toc.xml.in.h:1
 msgid "Applets"
@@ -159,14 +161,12 @@ msgid "Unknown"
 msgstr "Үл мэдэгдэх"
 
 #: src/yelp-error.c:46
-#, fuzzy
 msgid "The selected document could not be opened"
-msgstr "'%s'  баримт нээгдэхгүй байна"
+msgstr "Сонгосон баримт нээгдэхгүй байна"
 
 #: src/yelp-error.c:52
-#, fuzzy
 msgid "The selected page could not be found in this document."
-msgstr "Энэ баримтанд '%s' хуудас олдсонгүй"
+msgstr "Энэ баримтан дахь сонгосон хуудас олдсонгүй."
 
 #: src/yelp-error.c:58
 msgid "The table of contents could not be read."
@@ -177,9 +177,8 @@ msgid "DocBook SGML documents are no longer supported."
 msgstr "ДокБүүк-ийн СЖМЛ баримт дэмжигдэхээ болисон."
 
 #: src/yelp-error.c:70
-#, fuzzy
 msgid "The selected file could not be read."
-msgstr "Агуулагын хүснэгт уншигдахгүй байна."
+msgstr "Сонгосон фай уншигдахгүй байна."
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
@@ -269,13 +268,13 @@ msgid "YelpTocPager: Pause count is negative."
 msgstr "ЕлпТокПейжэр: Түр зогсолтын тоо сөрөг байна."
 
 #: src/yelp-toc-pager.c:486
-#, fuzzy, c-format
+#, c-format
 msgid "Could not load the OMF file '%s'."
-msgstr "Yelp »%s« идэвхижсэнгүй."
+msgstr "»%s« OMF файл ачаалагдсангүй."
 
 #: src/yelp-toc-pager.c:892
 msgid "Categories"
-msgstr "Категорууд"
+msgstr "Ангилалууд"
 
 # CHECK
 #: src/yelp-toc-pager.c:906
@@ -331,14 +330,12 @@ msgid "/Go/"
 msgstr "/Оч/"
 
 #: src/yelp-window.c:278
-#, fuzzy
 msgid "/Go/_Previous Page"
-msgstr "/Оч/Өмнөх"
+msgstr "/Оч/Ө_мнөх хуудас руу"
 
 #: src/yelp-window.c:281
-#, fuzzy
 msgid "/Go/_Next Page"
-msgstr "/Оч/_Дараагийн"
+msgstr "/Оч/_Дараагийн хуудас руу"
 
 #: src/yelp-window.c:284
 msgid "/Go/_Contents"
@@ -404,268 +401,263 @@ msgstr "Гноме-ийн Тусламж Хөтөч"
 
 #: stylesheets/l10n.xml.in.h:1
 msgid "&#8216;"
-msgstr ""
+msgstr "&#8216;"
 
 #: stylesheets/l10n.xml.in.h:2
 msgid "&#8217;"
-msgstr ""
+msgstr "&#8217;"
 
 #: stylesheets/l10n.xml.in.h:3
 msgid "&#8220;"
-msgstr ""
+msgstr "&#8220;"
 
 #: stylesheets/l10n.xml.in.h:4
 msgid "&#8221;"
-msgstr ""
+msgstr "&#8221;"
 
 #: stylesheets/l10n.xml.in.h:5
 msgid "About This Article"
-msgstr ""
+msgstr "Энэ нийтлэлийн тухай"
 
 #: stylesheets/l10n.xml.in.h:6
 msgid "About This Bibliography"
-msgstr ""
+msgstr "Энэ ашигласан номын тухай"
 
 #: stylesheets/l10n.xml.in.h:7
 msgid "About This Book"
-msgstr ""
+msgstr "Энэ номын тухай"
 
 #: stylesheets/l10n.xml.in.h:8
 msgid "About This Chapter"
-msgstr ""
+msgstr "Энэ бүлгийн тухай"
 
 #: stylesheets/l10n.xml.in.h:9
 msgid "About This Entry"
-msgstr ""
+msgstr "Энэ бичлэгийн тухай"
 
 #: stylesheets/l10n.xml.in.h:10
 msgid "About This Glossary"
-msgstr ""
+msgstr "Энэ тайлбар толийн тухай"
 
 #: stylesheets/l10n.xml.in.h:11
 msgid "About This Index"
-msgstr ""
+msgstr "Энэ индексийн тухай"
 
 #: stylesheets/l10n.xml.in.h:12
 msgid "About This Part"
-msgstr ""
+msgstr "Энэ хэсгийн тухай"
 
 #: stylesheets/l10n.xml.in.h:13
 msgid "About This Preface"
-msgstr ""
+msgstr "Энэ хэллэгийн тухай"
 
 #: stylesheets/l10n.xml.in.h:14
 msgid "About This Reference"
-msgstr ""
+msgstr "Энэ хамаарлын тухай"
 
 #: stylesheets/l10n.xml.in.h:15
 msgid "About This Section"
-msgstr ""
+msgstr "Энэ бүлгийн тухай"
 
 #: stylesheets/l10n.xml.in.h:16
 msgid "About This Set"
-msgstr ""
+msgstr "Энэ олонлогийн тухай"
 
 #: stylesheets/l10n.xml.in.h:17
-#, fuzzy
 msgid "Affiliation"
-msgstr "Х.программ"
+msgstr "Бүлэгчилэл"
 
 #: stylesheets/l10n.xml.in.h:18
 msgid "Appendix"
-msgstr ""
+msgstr "Хавсралт"
 
 #: stylesheets/l10n.xml.in.h:19
 msgid "Article"
-msgstr ""
+msgstr "Нийтлэл"
 
 #: stylesheets/l10n.xml.in.h:20
 msgid "Audience"
-msgstr ""
+msgstr "Уншигчид"
 
 #: stylesheets/l10n.xml.in.h:21
 msgid "Author"
-msgstr ""
+msgstr "Зохиогч"
 
 #: stylesheets/l10n.xml.in.h:22
 msgid "Authors"
-msgstr ""
+msgstr "Зохиогчид"
 
 #: stylesheets/l10n.xml.in.h:23
 msgid "Bibliography"
-msgstr ""
+msgstr "Ашигласан ном"
 
 #: stylesheets/l10n.xml.in.h:24
 msgid "Book"
-msgstr ""
+msgstr "Ном"
 
 #: stylesheets/l10n.xml.in.h:25
 msgid "Caution"
-msgstr ""
+msgstr "Анхааруулга"
 
 #: stylesheets/l10n.xml.in.h:26
 msgid "Chapter"
-msgstr ""
+msgstr "Бүлэг"
 
 #: stylesheets/l10n.xml.in.h:27
 msgid "Collaborator"
-msgstr ""
+msgstr "Хамтрагч"
 
 #: stylesheets/l10n.xml.in.h:28
 msgid "Collaborators"
-msgstr ""
+msgstr "Хамтрагчид"
 
 #: stylesheets/l10n.xml.in.h:29
 msgid "Colophon"
-msgstr ""
+msgstr "Түлхүүр бичиг"
 
 #: stylesheets/l10n.xml.in.h:31
 msgid "Copyright"
-msgstr ""
+msgstr "Зохиогчийн эрх"
 
 #: stylesheets/l10n.xml.in.h:32
 msgid "Copyrights"
-msgstr ""
+msgstr "Зохиогчидын эрх"
 
 #: stylesheets/l10n.xml.in.h:33
 msgid "Date"
-msgstr ""
+msgstr "Огноо"
 
 #: stylesheets/l10n.xml.in.h:34
-#, fuzzy
 msgid "Dedication"
-msgstr "Хэсэг"
+msgstr "Оршил"
 
 #: stylesheets/l10n.xml.in.h:35
-#, fuzzy
 msgid "Editor"
-msgstr "Засварлагчууд"
+msgstr "Боловсруулагч"
 
 #: stylesheets/l10n.xml.in.h:37
 msgid "Email"
-msgstr ""
+msgstr "Эшуудан"
 
 #: stylesheets/l10n.xml.in.h:38
 msgid "Example"
-msgstr ""
+msgstr "Жишээ"
 
 #: stylesheets/l10n.xml.in.h:39
 msgid "Figure"
-msgstr ""
+msgstr "Зураг"
 
 #: stylesheets/l10n.xml.in.h:40
 msgid "Glossary"
-msgstr ""
+msgstr "Тайлбар толь"
 
 #: stylesheets/l10n.xml.in.h:41
 msgid "Important"
-msgstr ""
+msgstr "Чухал"
 
 #: stylesheets/l10n.xml.in.h:42
 msgid "Index"
-msgstr ""
+msgstr "Индекс"
 
 #: stylesheets/l10n.xml.in.h:43
 msgid "Legal Notice"
-msgstr ""
+msgstr "Хууль зүйн тэмдэглэл"
 
 #: stylesheets/l10n.xml.in.h:44
 msgid "Level"
-msgstr ""
+msgstr "Төвшин"
 
 #: stylesheets/l10n.xml.in.h:45
 msgid "Message Audience"
-msgstr ""
+msgstr "Уншигчийн зурвас"
 
 #: stylesheets/l10n.xml.in.h:46
 msgid "Message Level"
-msgstr ""
+msgstr "Зурвасын төвшин"
 
 #: stylesheets/l10n.xml.in.h:47
 msgid "Message Origin"
-msgstr ""
+msgstr "Зурвас эх үүсэл"
 
 #: stylesheets/l10n.xml.in.h:48
 msgid "Note"
-msgstr ""
+msgstr "Тэмдэглэл"
 
 #: stylesheets/l10n.xml.in.h:49
 msgid "Origin"
-msgstr ""
+msgstr "Эх үүсэл"
 
 #: stylesheets/l10n.xml.in.h:50
 msgid "Other Contributor"
-msgstr ""
+msgstr "Бусад оролцогч"
 
 #: stylesheets/l10n.xml.in.h:51
 msgid "Other Contributors"
-msgstr ""
+msgstr "Бусад оролцогчид"
 
 #: stylesheets/l10n.xml.in.h:52
 msgid "Part"
-msgstr ""
+msgstr "Хэсэг"
 
 #: stylesheets/l10n.xml.in.h:53
 msgid "Preface"
-msgstr ""
+msgstr "Өмнөх үг"
 
 #: stylesheets/l10n.xml.in.h:54
 msgid "Publisher"
-msgstr ""
+msgstr "Хэвлэгч"
 
 #: stylesheets/l10n.xml.in.h:55
 msgid "Publishers"
-msgstr ""
+msgstr "Хэвлэгчид"
 
 #: stylesheets/l10n.xml.in.h:56
 msgid "Reference"
-msgstr ""
+msgstr "Хамаарал"
 
 #: stylesheets/l10n.xml.in.h:57
 msgid "Reference Entry"
-msgstr ""
+msgstr "Хамаарлын бичлэг"
 
 #: stylesheets/l10n.xml.in.h:58
 msgid "Reference Section"
-msgstr ""
+msgstr "Хамаарлын хэсэг"
 
 #: stylesheets/l10n.xml.in.h:59
 msgid "Revision History"
-msgstr ""
+msgstr "Шинэчилэгдсэн түүх"
 
 #: stylesheets/l10n.xml.in.h:61
 msgid "See"
-msgstr ""
+msgstr "Харна уу"
 
 #: stylesheets/l10n.xml.in.h:62
 msgid "See Also"
-msgstr ""
+msgstr "Мөн харна уу"
 
 #: stylesheets/l10n.xml.in.h:63
 msgid "Set Index"
-msgstr ""
+msgstr "Индекс тогтоох"
 
 #: stylesheets/l10n.xml.in.h:64
 msgid "Table"
-msgstr ""
+msgstr "Хүснэгт"
 
 #: stylesheets/l10n.xml.in.h:65
-#, fuzzy
 msgid "Table of Contents"
-msgstr "Тусламж агуулга"
+msgstr "Агуулгын хүснэгт"
 
 #: stylesheets/l10n.xml.in.h:66
 msgid "Tip"
-msgstr ""
+msgstr "Зөвлөмж"
 
 #: stylesheets/l10n.xml.in.h:67
-#, fuzzy
 msgid "Title"
-msgstr "Гарчигийн хуудас"
+msgstr "Гарчиг"
 
 #: stylesheets/l10n.xml.in.h:69
 msgid "Warning"
-msgstr ""
+msgstr "Сануулга"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
@@ -677,3 +669,4 @@ msgstr "Тусламж"
 
 #~ msgid "The document '%s' does not exist"
 #~ msgstr "»%s« баримт алга байна"
+
