--- a/po/ca.po
+++ b/po/ca.po
@@ -6,14 +6,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp 2.5.1\n"
-"POT-Creation-Date: 2004-02-04 17:19-0600\n"
-"PO-Revision-Date: 2004-01-06 02:27+0100\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-02-05 15:05+0100\n"
+"PO-Revision-Date: 2004-02-05 15:14+0100\n"
 "Last-Translator: Jordi Mallach <jordi@sindominio.net>\n"
 "Language-Team: Catalan <tradgnome@softcatala.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
 
 #: data/toc.xml.in.h:1
 msgid "Applets"
@@ -158,14 +158,12 @@ msgid "Unknown"
 msgstr "Desconegut"
 
 #: src/yelp-error.c:46
-#, fuzzy
 msgid "The selected document could not be opened"
-msgstr "No s'ha pogut obrir el document «%s»"
+msgstr "No s'ha pogut obrir el document seleccionat"
 
 #: src/yelp-error.c:52
-#, fuzzy
 msgid "The selected page could not be found in this document."
-msgstr "No s'ha pogut trobar la pàgina «%s» en aquest document."
+msgstr "No s'ha pogut trobar la pàgina seleccionada en aquest document."
 
 #: src/yelp-error.c:58
 msgid "The table of contents could not be read."
@@ -176,9 +174,8 @@ msgid "DocBook SGML documents are no longer supported."
 msgstr "Els documents DocBook SGML ja no són suportats."
 
 #: src/yelp-error.c:70
-#, fuzzy
 msgid "The selected file could not be read."
-msgstr "No s'ha pogut llegir la taula de continguts."
+msgstr "No s'ha pogut llegir el fitxer seleccionat."
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
@@ -267,9 +264,9 @@ msgid "YelpTocPager: Pause count is negative."
 msgstr "YelpTocPager: el compte de pausa és negatiu."
 
 #: src/yelp-toc-pager.c:486
-#, fuzzy, c-format
+#, c-format
 msgid "Could not load the OMF file '%s'."
-msgstr "No s'ha pogut activar Yelp: «%s»"
+msgstr "No s'ha pogut carregar el fitxer OMF «%s»."
 
 #: src/yelp-toc-pager.c:892
 msgid "Categories"
@@ -328,14 +325,12 @@ msgid "/Go/"
 msgstr "/Vés/"
 
 #: src/yelp-window.c:278
-#, fuzzy
 msgid "/Go/_Previous Page"
-msgstr "/Vés/_Anterior"
+msgstr "/Vés/_Pàgina anterior"
 
 #: src/yelp-window.c:281
-#, fuzzy
 msgid "/Go/_Next Page"
-msgstr "/Vés/_Següent"
+msgstr "/Vés/Pàgi_na següent"
 
 #: src/yelp-window.c:284
 msgid "/Go/_Contents"
@@ -397,173 +392,159 @@ msgstr "Navegador d'ajuda per al GNOME"
 
 #: stylesheets/l10n.xml.in.h:1
 msgid "&#8216;"
-msgstr ""
+msgstr "&#8216;"
 
 #: stylesheets/l10n.xml.in.h:2
 msgid "&#8217;"
-msgstr ""
+msgstr "&#8217;"
 
 #: stylesheets/l10n.xml.in.h:3
 msgid "&#8220;"
-msgstr ""
+msgstr "&#8220;"
 
 #: stylesheets/l10n.xml.in.h:4
 msgid "&#8221;"
-msgstr ""
+msgstr "&#8221;"
 
 #: stylesheets/l10n.xml.in.h:5
-#, fuzzy
 msgid "About This Article"
-msgstr "Quant a aquest document"
+msgstr "Quant a aquest article"
 
 #: stylesheets/l10n.xml.in.h:6
 msgid "About This Bibliography"
-msgstr ""
+msgstr "Quant a aquesta bibliografia"
 
 #: stylesheets/l10n.xml.in.h:7
-#, fuzzy
 msgid "About This Book"
-msgstr "Quant a aquest document"
+msgstr "Quant a aquest llibre"
 
 #: stylesheets/l10n.xml.in.h:8
-#, fuzzy
 msgid "About This Chapter"
-msgstr "Quant a aquest document"
+msgstr "Quant a aquest capítol"
 
 #: stylesheets/l10n.xml.in.h:9
-#, fuzzy
 msgid "About This Entry"
-msgstr "Quant a aquest document"
+msgstr "Quant a aquesta entrada"
 
 #: stylesheets/l10n.xml.in.h:10
-#, fuzzy
 msgid "About This Glossary"
-msgstr "Quant a aquest document"
+msgstr "Quant a aquest glossari"
 
 #: stylesheets/l10n.xml.in.h:11
-#, fuzzy
 msgid "About This Index"
-msgstr "Quant a aquest document"
+msgstr "Quant a aquest índex"
 
 #: stylesheets/l10n.xml.in.h:12
-#, fuzzy
 msgid "About This Part"
-msgstr "Quant a aquest document"
+msgstr "Quant a aquesta part"
 
 #: stylesheets/l10n.xml.in.h:13
-#, fuzzy
 msgid "About This Preface"
-msgstr "Quant a aquest document"
+msgstr "Quant a aquest prefaci"
 
 #: stylesheets/l10n.xml.in.h:14
-#, fuzzy
 msgid "About This Reference"
-msgstr "Quant a aquest document"
+msgstr "Quant a aquesta referència"
 
 #: stylesheets/l10n.xml.in.h:15
-#, fuzzy
 msgid "About This Section"
-msgstr "Quant a aquest document"
+msgstr "Quant a aquesta secció"
 
 #: stylesheets/l10n.xml.in.h:16
-#, fuzzy
 msgid "About This Set"
-msgstr "Quant a aquest document"
+msgstr "Quant a aquest joc"
 
 #: stylesheets/l10n.xml.in.h:17
-#, fuzzy
 msgid "Affiliation"
-msgstr "Aplicacions"
+msgstr "Afiliació"
 
 #: stylesheets/l10n.xml.in.h:18
 msgid "Appendix"
-msgstr ""
+msgstr "Apèndix"
 
 #: stylesheets/l10n.xml.in.h:19
 msgid "Article"
-msgstr ""
+msgstr "Article"
 
 #: stylesheets/l10n.xml.in.h:20
 msgid "Audience"
-msgstr ""
+msgstr "Audiència"
 
 #: stylesheets/l10n.xml.in.h:21
 msgid "Author"
-msgstr ""
+msgstr "Autor"
 
 #: stylesheets/l10n.xml.in.h:22
 msgid "Authors"
-msgstr ""
+msgstr "Autors"
 
 #: stylesheets/l10n.xml.in.h:23
 msgid "Bibliography"
-msgstr ""
+msgstr "Bibliografia"
 
 #: stylesheets/l10n.xml.in.h:24
 msgid "Book"
-msgstr ""
+msgstr "Llibre"
 
 #: stylesheets/l10n.xml.in.h:25
 msgid "Caution"
-msgstr ""
+msgstr "Compte"
 
 #: stylesheets/l10n.xml.in.h:26
 msgid "Chapter"
-msgstr ""
+msgstr "Capítol"
 
 #: stylesheets/l10n.xml.in.h:27
 msgid "Collaborator"
-msgstr ""
+msgstr "Col·laborador"
 
 #: stylesheets/l10n.xml.in.h:28
 msgid "Collaborators"
-msgstr ""
+msgstr "Col·laboradors"
 
 #: stylesheets/l10n.xml.in.h:29
 msgid "Colophon"
-msgstr ""
+msgstr "Colofó"
 
 #: stylesheets/l10n.xml.in.h:31
 msgid "Copyright"
-msgstr ""
+msgstr "Copyright"
 
 #: stylesheets/l10n.xml.in.h:32
 msgid "Copyrights"
-msgstr ""
+msgstr "Copyrights"
 
 #: stylesheets/l10n.xml.in.h:33
 msgid "Date"
-msgstr ""
+msgstr "Data"
 
 #: stylesheets/l10n.xml.in.h:34
-#, fuzzy
 msgid "Dedication"
-msgstr "Secció"
+msgstr "Dedicatòria"
 
 #: stylesheets/l10n.xml.in.h:35
-#, fuzzy
 msgid "Editor"
-msgstr "Editors"
+msgstr "Editor"
 
 #: stylesheets/l10n.xml.in.h:37
 msgid "Email"
-msgstr ""
+msgstr "Correu-e"
 
 #: stylesheets/l10n.xml.in.h:38
 msgid "Example"
-msgstr ""
+msgstr "Exemple"
 
 #: stylesheets/l10n.xml.in.h:39
 msgid "Figure"
-msgstr ""
+msgstr "Imatge"
 
 #: stylesheets/l10n.xml.in.h:40
 msgid "Glossary"
-msgstr ""
+msgstr "Glossari"
 
 #: stylesheets/l10n.xml.in.h:41
 msgid "Important"
-msgstr ""
+msgstr "Important"
 
 #: stylesheets/l10n.xml.in.h:42
 msgid "Index"
@@ -571,106 +552,103 @@ msgstr "Índex"
 
 #: stylesheets/l10n.xml.in.h:43
 msgid "Legal Notice"
-msgstr ""
+msgstr "Nota legal"
 
 #: stylesheets/l10n.xml.in.h:44
 msgid "Level"
-msgstr ""
+msgstr "Nivell"
 
 #: stylesheets/l10n.xml.in.h:45
 msgid "Message Audience"
-msgstr ""
+msgstr "Audiència del missatge"
 
 #: stylesheets/l10n.xml.in.h:46
 msgid "Message Level"
-msgstr ""
+msgstr "Nivell del missatge"
 
 #: stylesheets/l10n.xml.in.h:47
 msgid "Message Origin"
-msgstr ""
+msgstr "Origen del missatge"
 
 #: stylesheets/l10n.xml.in.h:48
 msgid "Note"
-msgstr ""
+msgstr "Nota"
 
 #: stylesheets/l10n.xml.in.h:49
 msgid "Origin"
-msgstr ""
+msgstr "Origen"
 
 #: stylesheets/l10n.xml.in.h:50
 msgid "Other Contributor"
-msgstr ""
+msgstr "Altre contribuïdor"
 
 #: stylesheets/l10n.xml.in.h:51
 msgid "Other Contributors"
-msgstr ""
+msgstr "Altres contribuïdors"
 
 #: stylesheets/l10n.xml.in.h:52
 msgid "Part"
-msgstr ""
+msgstr "Part"
 
 #: stylesheets/l10n.xml.in.h:53
 msgid "Preface"
-msgstr ""
+msgstr "Prefaci"
 
 #: stylesheets/l10n.xml.in.h:54
 msgid "Publisher"
-msgstr ""
+msgstr "Editor"
 
 #: stylesheets/l10n.xml.in.h:55
 msgid "Publishers"
-msgstr ""
+msgstr "Editors"
 
 #: stylesheets/l10n.xml.in.h:56
 msgid "Reference"
-msgstr ""
+msgstr "Referència"
 
 #: stylesheets/l10n.xml.in.h:57
 msgid "Reference Entry"
-msgstr ""
+msgstr "Entrada de referència"
 
 #: stylesheets/l10n.xml.in.h:58
 msgid "Reference Section"
-msgstr ""
+msgstr "Secció de referència"
 
 #: stylesheets/l10n.xml.in.h:59
 msgid "Revision History"
-msgstr ""
+msgstr "Historia de revisions"
 
 #: stylesheets/l10n.xml.in.h:61
 msgid "See"
-msgstr ""
+msgstr "Vegeu"
 
 #: stylesheets/l10n.xml.in.h:62
 msgid "See Also"
-msgstr ""
+msgstr "Vegeu també"
 
 #: stylesheets/l10n.xml.in.h:63
-#, fuzzy
 msgid "Set Index"
-msgstr "Índex"
+msgstr "Estableix l'índex"
 
 #: stylesheets/l10n.xml.in.h:64
 msgid "Table"
-msgstr ""
+msgstr "Taula"
 
 #: stylesheets/l10n.xml.in.h:65
-#, fuzzy
 msgid "Table of Contents"
-msgstr "Continguts de l'ajuda"
+msgstr "Taula de continguts"
 
 #: stylesheets/l10n.xml.in.h:66
 msgid "Tip"
-msgstr ""
+msgstr "Suggeriment"
 
 #: stylesheets/l10n.xml.in.h:67
-#, fuzzy
 msgid "Title"
-msgstr "Pàgina de títol"
+msgstr "Títol"
 
 #: stylesheets/l10n.xml.in.h:69
 msgid "Warning"
-msgstr ""
+msgstr "Avís"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
