--- a/po/hr.po
+++ b/po/hr.po
@@ -1,15 +1,15 @@
-# Translation of yelp to Croatian
-# Copyright (C) Croatian team
-# Translators: Automatski Prijevod <>,Denis Lackovic <delacko@fly.srk.fer.hr>,Nikola Planinac <>,
+# Translation of yelp to Croatiann
+# Copyright (C) Croatiann team
+# Translators: Automatski Prijevod <>,Danijel Studen <dstuden@vuka.hr>,Denis Lackovic <delacko@fly.srk.fer.hr>,Diana Ćorluka <dina@iskrameco.hr>,Mato Kutlić <mate@iskraemeco.hr>,Nikola Planinac <>,Robert Sedak <robert.sedak@sk.tel.hr>,Vlatko Kosturjak <kost@linux.hr>,
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp 0\n"
-"POT-Creation-Date: 2004-02-04 17:19-0600\n"
-"PO-Revision-Date: 2004-01-04 08:50+CET\n"
-"Last-Translator: Robert Sedak <robert.sedak@sk.tel.hr>\n"
+"POT-Creation-Date: 2004-02-01 17:16+0100\n"
+"PO-Revision-Date: 2004-02-05 23:53+CET\n"
+"Last-Translator: auto\n"
 "Language-Team: Croatian <lokalizacija@linux.hr>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: TransDict server\n"
 
@@ -145,25 +145,23 @@ msgstr "Nemam više memorije"
 msgid "Titlepage"
 msgstr "Naslovna stranica"
 
-#: src/yelp-db-pager.c:629 stylesheets/l10n.xml.in.h:30
-#: src/yelp-man-pager.c:372
+#: src/yelp-db-pager.c:629 src/yelp-man-pager.c:372
+#: stylesheets/l10n.xml.in.h:30
 msgid "Contents"
 msgstr "Sadržaj"
 
-#: src/yelp-db-pager.c:647 stylesheets/l10n.xml.in.h:68
-#: src/yelp-man-pager.c:390
+#: src/yelp-db-pager.c:647 src/yelp-man-pager.c:390
+#: stylesheets/l10n.xml.in.h:68
 msgid "Unknown"
 msgstr "Napoznato"
 
 #: src/yelp-error.c:46
-#, fuzzy
 msgid "The selected document could not be opened"
-msgstr "Ne mogu otvoriti dokument '%s'"
+msgstr "Odabrani dokument je nemoguće otvoriti"
 
 #: src/yelp-error.c:52
-#, fuzzy
 msgid "The selected page could not be found in this document."
-msgstr "U ovom dokumentu ne može biti nađena stranica '%s'."
+msgstr "Odabrana stranica nije nađena u ovom dokumentu."
 
 #: src/yelp-error.c:58
 msgid "The table of contents could not be read."
@@ -174,9 +172,8 @@ msgid "DocBook SGML documents are no longer supported."
 msgstr "Više nisu podržani DocBook SGML documenti."
 
 #: src/yelp-error.c:70
-#, fuzzy
 msgid "The selected file could not be read."
-msgstr "Ne može se pročitati tablica sadržaja."
+msgstr "Ne može se otvoriti odabrana datoteka"
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
@@ -277,137 +274,135 @@ msgstr "Kategorije"
 msgid "Documents"
 msgstr "Dokumenti"
 
-#: src/yelp-window.c:248
+#: src/yelp-window.c:231
 msgid "/_File"
 msgstr "/_Datoteka"
 
-#: src/yelp-window.c:249
+#: src/yelp-window.c:232
 msgid "/File/_New window"
 msgstr "/File/_Novi prozor"
 
-#: src/yelp-window.c:252
+#: src/yelp-window.c:235
 msgid "/File/_Close window"
 msgstr "/File/_Zatvori prozor"
 
-#: src/yelp-window.c:256
+#: src/yelp-window.c:239
 msgid "/_Edit"
 msgstr "/_Uredi"
 
-#: src/yelp-window.c:257
+#: src/yelp-window.c:240
 msgid "/Edit/_Find..."
 msgstr "/Uređivanje/_Traži..."
 
-#: src/yelp-window.c:260
+#: src/yelp-window.c:243
 msgid "/Edit/Find Ne_xt"
 msgstr "/Uređivanje/Traži _sljedeće"
 
-#: src/yelp-window.c:263
+#: src/yelp-window.c:246
 msgid "/Edit/Find Pre_vious"
 msgstr "/Uređivanje/Traži _prethodno"
 
-#: src/yelp-window.c:267
+#: src/yelp-window.c:250
 msgid "/_Go"
 msgstr "/_Go"
 
-#: src/yelp-window.c:268
+#: src/yelp-window.c:251
 msgid "/Go/_Back"
 msgstr "/Go/_Back"
 
-#: src/yelp-window.c:271
+#: src/yelp-window.c:254
 msgid "/Go/_Forward"
 msgstr "/Go/_Forward"
 
-#: src/yelp-window.c:274
+#: src/yelp-window.c:257
 msgid "/Go/_Home"
 msgstr "/Go/_Home"
 
-#: src/yelp-window.c:277
+#: src/yelp-window.c:260
 msgid "/Go/"
 msgstr "/Idi/"
 
-#: src/yelp-window.c:278
-#, fuzzy
+#: src/yelp-window.c:261
 msgid "/Go/_Previous Page"
-msgstr "/Idi/_Prethodni"
+msgstr "/Idi/_Prethodna Stranica"
 
-#: src/yelp-window.c:281
-#, fuzzy
+#: src/yelp-window.c:264
 msgid "/Go/_Next Page"
-msgstr "/Idi/_Sljedeći"
+msgstr "/Idi/_Sljedeća Stra_nica"
 
-#: src/yelp-window.c:284
+#: src/yelp-window.c:267
 msgid "/Go/_Contents"
 msgstr "/Idi/_Sadržaj"
 
-#: src/yelp-window.c:288
+#: src/yelp-window.c:271
 msgid "/_Help"
 msgstr "/_Pomoć"
 
-#: src/yelp-window.c:289
+#: src/yelp-window.c:272
 msgid "/Help/_About"
 msgstr "/Pomoć/_O"
 
-#: src/yelp-window.c:351
+#: src/yelp-window.c:334
 msgid "Help Browser"
 msgstr "Preglednik pomoći"
 
-#: src/yelp-window.c:569 stylesheets/l10n.xml.in.h:60
+#: src/yelp-window.c:552 stylesheets/l10n.xml.in.h:60
 msgid "Section"
 msgstr "Odsječak"
 
-#: src/yelp-window.c:624
+#: src/yelp-window.c:609
 msgid "Back"
 msgstr "Nazad"
 
-#: src/yelp-window.c:625
+#: src/yelp-window.c:610
 msgid "Show previous page in history"
 msgstr "Pokaži prethodnu stranicu u povijesti"
 
-#: src/yelp-window.c:635
+#: src/yelp-window.c:620
 msgid "Forward"
 msgstr "Naprijed"
 
-#: src/yelp-window.c:636
+#: src/yelp-window.c:621
 msgid "Show next page in history"
 msgstr "Pokaži sljedeću stranicu u povijesti"
 
-#: src/yelp-window.c:648
+#: src/yelp-window.c:633
 msgid "Home"
 msgstr "Polazno"
 
-#: src/yelp-window.c:649
+#: src/yelp-window.c:634
 msgid "Go to home view"
 msgstr "Idi na početni pogled"
 
-#: src/yelp-window.c:859
+#: src/yelp-window.c:844
 msgid "Loading..."
 msgstr "Učitavam..."
 
 #. Note to translators: put here your name (and address) so it
-#. * will shop up in the "about" box
-#: src/yelp-window.c:1290
+#.  * will shop up in the "about" box
+#: src/yelp-window.c:1267
 msgid "translator_credits"
 msgstr "lokalizacija@linux.hr"
 
-#: src/yelp-window.c:1295
+#: src/yelp-window.c:1272
 msgid "A Help Browser for GNOME"
 msgstr "Preglednik pomoći za GNOME"
 
 #: stylesheets/l10n.xml.in.h:1
 msgid "&#8216;"
-msgstr ""
+msgstr "&#8216;"
 
 #: stylesheets/l10n.xml.in.h:2
 msgid "&#8217;"
-msgstr ""
+msgstr "&#8217;"
 
 #: stylesheets/l10n.xml.in.h:3
 msgid "&#8220;"
-msgstr ""
+msgstr "&#8220;"
 
 #: stylesheets/l10n.xml.in.h:4
 msgid "&#8221;"
-msgstr ""
+msgstr "&#8221;"
 
 #: stylesheets/l10n.xml.in.h:5
 #, fuzzy
@@ -416,102 +411,91 @@ msgstr "O ovom dokumentu"
 
 #: stylesheets/l10n.xml.in.h:6
 msgid "About This Bibliography"
-msgstr ""
+msgstr "O ovoj bibliografiji"
 
 #: stylesheets/l10n.xml.in.h:7
-#, fuzzy
 msgid "About This Book"
-msgstr "O ovom dokumentu"
+msgstr "O ovoj knjizi"
 
 #: stylesheets/l10n.xml.in.h:8
-#, fuzzy
 msgid "About This Chapter"
-msgstr "O ovom dokumentu"
+msgstr "O ovom poglavlju"
 
 #: stylesheets/l10n.xml.in.h:9
-#, fuzzy
 msgid "About This Entry"
-msgstr "O ovom dokumentu"
+msgstr "O ovoj stavci"
 
 #: stylesheets/l10n.xml.in.h:10
-#, fuzzy
 msgid "About This Glossary"
-msgstr "O ovom dokumentu"
+msgstr "O ovom indeksu riječi"
 
 #: stylesheets/l10n.xml.in.h:11
-#, fuzzy
 msgid "About This Index"
-msgstr "O ovom dokumentu"
+msgstr "O ovom indeksu"
 
 #: stylesheets/l10n.xml.in.h:12
-#, fuzzy
 msgid "About This Part"
-msgstr "O ovom dokumentu"
+msgstr "O ovom dijelu"
 
 #: stylesheets/l10n.xml.in.h:13
-#, fuzzy
 msgid "About This Preface"
-msgstr "O ovom dokumentu"
+msgstr "O ovom predgovoru"
 
 #: stylesheets/l10n.xml.in.h:14
-#, fuzzy
 msgid "About This Reference"
-msgstr "O ovom dokumentu"
+msgstr "O ovoj referenci"
 
 #: stylesheets/l10n.xml.in.h:15
-#, fuzzy
 msgid "About This Section"
-msgstr "O ovom dokumentu"
+msgstr "O ovom odjeljku"
 
 #: stylesheets/l10n.xml.in.h:16
-#, fuzzy
 msgid "About This Set"
-msgstr "O ovom dokumentu"
+msgstr "O ovom skupu"
 
 #: stylesheets/l10n.xml.in.h:17
-#, fuzzy
 msgid "Affiliation"
-msgstr "Aplikacije"
+msgstr "Grupacija"
 
 #: stylesheets/l10n.xml.in.h:18
 msgid "Appendix"
-msgstr ""
+msgstr "Dodatak"
 
 #: stylesheets/l10n.xml.in.h:19
 msgid "Article"
-msgstr ""
+msgstr "Članak"
 
 #: stylesheets/l10n.xml.in.h:20
 msgid "Audience"
-msgstr ""
+msgstr "Publika"
 
 #: stylesheets/l10n.xml.in.h:21
 msgid "Author"
-msgstr ""
+msgstr "Autor"
 
 #: stylesheets/l10n.xml.in.h:22
 msgid "Authors"
-msgstr ""
+msgstr "Autori"
 
 #: stylesheets/l10n.xml.in.h:23
 msgid "Bibliography"
-msgstr ""
+msgstr "Bibliografija"
 
 #: stylesheets/l10n.xml.in.h:24
 msgid "Book"
-msgstr ""
+msgstr "Knjiga"
 
 #: stylesheets/l10n.xml.in.h:25
 msgid "Caution"
-msgstr ""
+msgstr "Oprez"
 
 #: stylesheets/l10n.xml.in.h:26
 msgid "Chapter"
-msgstr ""
+msgstr "Poglavlje"
 
 #: stylesheets/l10n.xml.in.h:27
 msgid "Collaborator"
-msgstr ""
+msgstr "Suradnik"
 
 #: stylesheets/l10n.xml.in.h:28
 msgid "Collaborators"
@@ -519,11 +503,11 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:29
 msgid "Colophon"
-msgstr ""
+msgstr "Colophon"
 
 #: stylesheets/l10n.xml.in.h:31
 msgid "Copyright"
-msgstr ""
+msgstr "Autorsko pravo"
 
 #: stylesheets/l10n.xml.in.h:32
 msgid "Copyrights"
@@ -531,37 +515,35 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:33
 msgid "Date"
-msgstr ""
+msgstr "Datum"
 
 #: stylesheets/l10n.xml.in.h:34
-#, fuzzy
 msgid "Dedication"
-msgstr "Odsječak"
+msgstr "Posvećivanje"
 
 #: stylesheets/l10n.xml.in.h:35
-#, fuzzy
 msgid "Editor"
-msgstr "Uređivali"
+msgstr "Uređivač"
 
 #: stylesheets/l10n.xml.in.h:37
 msgid "Email"
-msgstr ""
+msgstr "E-pošta"
 
 #: stylesheets/l10n.xml.in.h:38
 msgid "Example"
-msgstr ""
+msgstr "Primjer"
 
 #: stylesheets/l10n.xml.in.h:39
 msgid "Figure"
-msgstr ""
+msgstr "Slika"
 
 #: stylesheets/l10n.xml.in.h:40
 msgid "Glossary"
-msgstr ""
+msgstr "Rječnik"
 
 #: stylesheets/l10n.xml.in.h:41
 msgid "Important"
-msgstr ""
+msgstr "Važno"
 
 #: stylesheets/l10n.xml.in.h:42
 msgid "Index"
@@ -569,35 +551,35 @@ msgstr "Indeks"
 
 #: stylesheets/l10n.xml.in.h:43
 msgid "Legal Notice"
-msgstr ""
+msgstr "Pravna napomena"
 
 #: stylesheets/l10n.xml.in.h:44
 msgid "Level"
-msgstr ""
+msgstr "Razina"
 
 #: stylesheets/l10n.xml.in.h:45
 msgid "Message Audience"
-msgstr ""
+msgstr "Publika za poruku"
 
 #: stylesheets/l10n.xml.in.h:46
 msgid "Message Level"
-msgstr ""
+msgstr "Razina poruke"
 
 #: stylesheets/l10n.xml.in.h:47
 msgid "Message Origin"
-msgstr ""
+msgstr "Izvorište poruke"
 
 #: stylesheets/l10n.xml.in.h:48
 msgid "Note"
-msgstr ""
+msgstr "Bilješka"
 
 #: stylesheets/l10n.xml.in.h:49
 msgid "Origin"
-msgstr ""
+msgstr "Izvorište"
 
 #: stylesheets/l10n.xml.in.h:50
 msgid "Other Contributor"
-msgstr ""
+msgstr "Neki drugi suradnik"
 
 #: stylesheets/l10n.xml.in.h:51
 msgid "Other Contributors"
@@ -605,15 +587,15 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:52
 msgid "Part"
-msgstr ""
+msgstr "Dio"
 
 #: stylesheets/l10n.xml.in.h:53
 msgid "Preface"
-msgstr ""
+msgstr "Predgovor"
 
 #: stylesheets/l10n.xml.in.h:54
 msgid "Publisher"
-msgstr ""
+msgstr "Izdavač"
 
 #: stylesheets/l10n.xml.in.h:55
 msgid "Publishers"
@@ -621,54 +603,51 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:56
 msgid "Reference"
-msgstr ""
+msgstr "Referenca"
 
 #: stylesheets/l10n.xml.in.h:57
 msgid "Reference Entry"
-msgstr ""
+msgstr "Zapis reference"
 
 #: stylesheets/l10n.xml.in.h:58
 msgid "Reference Section"
-msgstr ""
+msgstr "Odjeljak reference"
 
 #: stylesheets/l10n.xml.in.h:59
 msgid "Revision History"
-msgstr ""
+msgstr "Povijest revizije"
 
 #: stylesheets/l10n.xml.in.h:61
 msgid "See"
-msgstr ""
+msgstr "Vidi"
 
 #: stylesheets/l10n.xml.in.h:62
 msgid "See Also"
-msgstr ""
+msgstr "Pogledajte također"
 
 #: stylesheets/l10n.xml.in.h:63
-#, fuzzy
 msgid "Set Index"
-msgstr "Indeks"
+msgstr "Postavi indeks"
 
 #: stylesheets/l10n.xml.in.h:64
 msgid "Table"
-msgstr ""
+msgstr "Tablica"
 
 #: stylesheets/l10n.xml.in.h:65
-#, fuzzy
 msgid "Table of Contents"
-msgstr "Sadržaj pomoći"
+msgstr "Tablica sadržaja"
 
 #: stylesheets/l10n.xml.in.h:66
 msgid "Tip"
-msgstr ""
+msgstr "Savjet"
 
 #: stylesheets/l10n.xml.in.h:67
-#, fuzzy
 msgid "Title"
-msgstr "Naslovna stranica"
+msgstr "Naslov"
 
 #: stylesheets/l10n.xml.in.h:69
 msgid "Warning"
-msgstr ""
+msgstr "Upozorenje"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
@@ -678,50 +657,3 @@ msgstr "Zatražite pomoć za GNOME"
 msgid "Help"
 msgstr "Pomoć"
 
-#~ msgid "<b>Find text in the document:</b>"
-#~ msgstr "<b>Traži tekst u dokumentu:</b>"
-
-#~ msgid "Automatically _wrap around"
-#~ msgstr "Automatsko _omatanje"
-
-#~ msgid "Find text..."
-#~ msgstr "Traži tekst..."
-
-#~ msgid "Match _entire word"
-#~ msgstr "Uspoređuj _cijelu riječ"
-
-#~ msgid "_Match upper/lower case"
-#~ msgstr "_Osijetljivost na velika/mala slova"
-
-#~ msgid "Previous"
-#~ msgstr "Prethodni"
-
-#~ msgid "Next"
-#~ msgstr "Dalje"
-
-#~ msgid "_Search for:"
-#~ msgstr "Ožujak"
-
-#~ msgid "Additional documents"
-#~ msgstr "Dodatni dokumenti"
-
-#~ msgid "Manual Pages"
-#~ msgstr "Stranice uputstva"
-
-#~ msgid "Info Pages"
-#~ msgstr "Info stranice"
-
-#~ msgid "Manual pages"
-#~ msgstr "Priručne (man) stanice "
-
-#~ msgid "GNOME is"
-#~ msgstr "GNOME je"
-
-#~ msgid "Free Software"
-#~ msgstr "Slobodni softver"
-
-#~ msgid "(C)"
-#~ msgstr "(C)"
-
-#~ msgid "Search in the index"
-#~ msgstr "Traženje u indeksu"
